<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginEnd="10dp"
            android:text="@string/name"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_weight="5"
            android:textSize="24sp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginEnd="10dp"
            android:text="@string/phone"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:layout_weight="5"
            android:textSize="24sp"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginRight="10dp"
            android:text="@string/street"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/street"
            android:layout_weight="5"
            android:textSize="24sp"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginEnd="10dp"
            android:text="@string/email"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_weight="5"
            android:textSize="24sp"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginEnd="10dp"
            android:text="@string/city"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:layout_weight="5"
            android:textSize="24sp"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginEnd="10dp"
            android:text=""
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/save_contact" />
    </LinearLayout>
</LinearLayout>